# tests_android

./: .gitignore  .gitmodules  README.md  build.gradle  build.sh  settings.gradle
JBLHeadphone2/app/: CMakeLists.txt  build.gradle  fabric.properties
JBLHeadphone2/app/src/main/: AndroidManifest.xml
JBLHeadphone2/app/src/main/assets/: OpenSource.txt  eqDefaults.json  product_feature_listing.xml
JBLHeadphone2/app/src/main/jni/: calculateCalib.cpp  jbl_stc_com_activity_DashboardActivity.h  jbl_stc_com_activity_DashboardActivity_DashboardHandler.h
JBLHeadphone2/app/src/main/jni/inc/: EQAlgorithm.h  ae_common.h  ae_math.h  ae_memory.h  complex_op.h  iirfilt.h  signal.h
JBLHeadphone2/app/src/main/jni/src/: EQAlgorithm.c  complex_op.c  freqz.c  iirfilt.c  iirfilt_design.c
JBLHeadphone2/app/src/main/res/anim/: anim_first_time_text_down.xml  anim_scale_on_slow.xml  anim_triple_up_arrow.xml  breathing_lamp_fade_in.xml  breathing_lamp_fade_out.xml  dashboard_fadein.xml  dashboard_fadeout.xml  enter_from_down.xml  enter_from_left_for_info.xml  exit_to_right_for_info.xml  exit_to_up.xml  fadeout.xml  fadin.xml  nothing.xml
JBLHeadphone2/app/src/main/res/drawable/: base_arrow_down.xml  checkbox_ambient_selector.xml  checkbox_anc_selector.xml  checkbox_noise_cancel_selector.xml  checkbox_selector.xml  checkbox_talk_through_selector.xml  eq_choose_small_circle.xml  eq_drag_bg.xml  gray_black_txt.xml  horizontal_progress_not_charge.xml  horizontal_progress_orange_charge.xml  horizontal_progress_red_charge.xml  progress_bar.xml  rectangle_with_round_corner.xml  (+23 more)
(+642 files in other folders)
